Update WhatsApp link for coffee treat request

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <h1>You've Been Caught! ✨</h1>
         <p>Itni khoobsurti legal nahi hai! Punishment ke taur par aapko mujhe ek Coffee treat deni padegi. 😉</p>
         
-        <a id="waLink" href="https://wa.me/91YOUR_NUMBER_HERE?text=Okay%21%20Punishment%20manzoor%20hai.%20Coffee%20kab%20pila%20rahe%20ho%3F%20☕" class="wa-btn" style="background: #ff4081;">
+        <a id="waLink" href="https://wa.me/918272848739?text=Okay%21%20Punishment%20manzoor%20hai.%20Coffee%20kab%20pila%20rahe%20ho%3F%20☕" class="wa-btn" style="background: #ff4081;">
             Accept Punishment ☕
         </a>
     </div>
